<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/sv_change_pwd"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context="com.teksystems.devicetracker.view.views.activities.NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin_top_welcome">

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cancel"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:enabled="false"
                    android:text="@string/save"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>